<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="25sp">

    <View
        android:id="@+id/view8"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center"
        android:text="@string/아이디와비밀번호찾기" />

    <View
        android:id="@+id/view9"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_find_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/아이디찾기"
            android:background="#C6B7CB"
            android:textSize="18sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn_find_pwd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#DDD5E0"
            android:textSize="18sp"
            android:text="@string/비밀번호찾기"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/lightPurple">

        <FrameLayout
            android:id="@+id/frame_find_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10sp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="10sp"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/text_find_id_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/찾으려는아이디의이메일을입력"
                    android:textColor="@color/black"
                    android:bufferType="spannable"
                    android:layout_marginBottom="7dp"
                    android:textSize="15sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/edit_email"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="2.5"
                        android:autofillHints=""
                        android:background="@drawable/layout_edit_login_box"
                        android:hint="@string/이메일을입력해주세요"
                        android:inputType="textEmailAddress"
                        android:paddingHorizontal="10sp"
                        android:textColorHint="@color/black"
                        android:textSize="13sp" />

                    <Button
                        android:id="@+id/btn_cer_num"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="0.7"
                        android:background="@color/darkPurple"
                        android:text="@string/인증"
                        android:textColor="@color/white" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="20sp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/edit_cer_num"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="2.5"
                        android:autofillHints=""
                        android:background="@drawable/layout_edit_login_box"
                        android:hint="@string/인증번호를입력해주세요"
                        android:inputType="textEmailAddress"
                        android:paddingHorizontal="10sp"
                        android:textColorHint="@color/black"
                        android:textSize="13sp" />

                    <Button
                        android:id="@+id/btn_check"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="0.7"
                        android:background="@color/darkPurple"
                        android:text="@string/확인"
                        android:textColor="@color/white" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="2sp"
                    android:text="@string/수신다소지연"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/오분"
                    android:textColor="@color/black"
                    android:textSize="12sp" />


            </LinearLayout>


        </FrameLayout>

        <FrameLayout
            android:id="@+id/frame_find_id_ok"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20sp"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:text="@string/님의아이디는"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="0.7"
                    android:text="@string/다음과같습니다"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="0.7"
                    android:background="@drawable/layout_edit_login_box"
                    android:gravity="center"
                    android:text="@string/adkfsda_naver_com"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/text_find_pwd"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:text="@string/비밀번호잊으셨나요"
                    android:textColor="#094EB5" />
            </LinearLayout>

        </FrameLayout>

        <FrameLayout
            android:id="@+id/frame_find_pwd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10sp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <EditText
                    android:id="@+id/edit_new_pwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:autofillHints=""
                    android:background="@drawable/layout_edit_login_box"
                    android:hint="@string/새로운비밀번호를입력"
                    android:inputType="textEmailAddress"
                    android:paddingHorizontal="10sp"
                    android:textColorHint="@color/black"
                    android:layout_marginBottom="10dp"
                    android:textSize="13sp" />

                <EditText
                    android:id="@+id/edit_new_pwd_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:autofillHints=""
                    android:background="@drawable/layout_edit_login_box"
                    android:hint="@string/다시비번입력"
                    android:inputType="textEmailAddress"
                    android:paddingHorizontal="10sp"
                    android:textColorHint="@color/black"
                    android:layout_marginBottom="20dp"
                    android:textSize="13sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"/>

                    <Button
                        android:id="@+id/btn_set_pwd"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:background="@color/darkPurple"
                        android:text="@string/비밀번호변경하기"
                        android:textColor="@color/white" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"/>

                </LinearLayout>



            </LinearLayout>
        </FrameLayout>

    </FrameLayout>

    <View
        android:id="@+id/view10"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"/>

    <Button
        android:id="@+id/back_login"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:layout_marginVertical="10sp"
        android:layout_marginHorizontal="20sp"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/로그인페이지로돌아가기"
        android:background="@drawable/layout_btn_login_box"/>

    <View
        android:id="@+id/view11"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"/>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/text_we_ta_purple"
        android:contentDescription="@string/todo" />

</LinearLayout>