<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/linear_signup"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <include
        android:id="@+id/toolbar_layout"
        layout="@layout/bar_layout"/>

    <TextView
        android:id="@+id/text_signup_title"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginVertical="20dp"
        android:gravity="center"
        android:layout_weight="0.5"
        android:text="@string/title"
        android:textColor="@color/black"
        android:textSize="30sp"
        />

    <LinearLayout
        android:id="@+id/linear_signup_border"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_weight="3"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:paddingHorizontal="15dp"
        android:background="@drawable/layout_signup_text_border" >

        <TextView
            android:id="@+id/text_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text_signup"
            android:paddingBottom="30dp"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/linear_signup_id"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/edit_signup_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="7"
                android:background="@drawable/layout_signup_text_border"
                android:hint="@string/signup_id"
                android:autofillHints="id"
                android:inputType="text"
                android:paddingHorizontal="5dp"
                android:paddingVertical="10dp"
                />

            <Button
                android:id="@+id/btn_signup_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="2"
                android:text="@string/btn_ok"
                android:paddingHorizontal="5dp"
                android:paddingVertical="10dp"
                />

        </LinearLayout>

        <EditText
            android:id="@+id/edit_signup_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/layout_signup_text_border"
            android:hint="@string/signup_pw"
            android:autofillHints="password"
            android:inputType="textPassword"
            android:paddingHorizontal="5dp"
            android:paddingVertical="10dp"
            />

        <EditText
            android:id="@+id/edit_signup_repwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/layout_signup_text_border"
            android:hint="@string/signup_repw"
            android:autofillHints="password"
            android:inputType="textPassword"
            android:paddingHorizontal="5dp"
            android:paddingVertical="10dp"
            />

        <LinearLayout
            android:id="@+id/linear_signup_email"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/edit_signup_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="7"
                android:background="@drawable/layout_signup_text_border"
                android:hint="@string/signup_email"
                android:autofillHints="email"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="5dp"
                android:paddingVertical="10dp"
                />

            <Button
                android:id="@+id/btn_signup_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="2"
                android:text="@string/btn_verify"
                android:paddingHorizontal="5dp"
                android:paddingVertical="10dp"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_signup_nickname"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/edit_signup_nickname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="7"
                android:background="@drawable/layout_signup_text_border"
                android:hint="@string/signup_nickname"
                android:autofillHints="name"
                android:inputType="text"
                android:paddingHorizontal="5dp"
                android:paddingVertical="10dp"
                />

            <Button
                android:id="@+id/btn_signup_nickname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="2"
                android:text="@string/btn_ok"
                android:paddingHorizontal="5dp"
                android:paddingVertical="10dp"
                />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_signup_checkdialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="36dp"
        android:text="@string/btn_signup" />

    <Button
        android:id="@+id/btn_signup_back2login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="16dp"
        android:text="@string/btn_backtologin" />

</LinearLayout>