<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:paddingTop="30dp"
    android:paddingBottom="10dp"
    android:background="@drawable/layout_wetain_detail"
    >

    <TextView
        android:id="@+id/dialog_text1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:paddingTop="10dp"
        android:layout_marginHorizontal="10dp"
        android:text="@string/dialog_signup1" />

    <TextView
        android:id="@+id/dialog_text2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="10dp"
        android:layout_marginHorizontal="10dp"
        android:text="@string/dialog_signup2" />

    <TextView
        android:id="@+id/label"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="0.41"
        android:gravity="center"
        android:text="@string/we_ta"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:autoSizeTextType="uniform"
        tools:ignore="NestedWeights" />

</LinearLayout>