<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20sp"
    android:layout_marginVertical="10sp">


    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.05"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        app:srcCompat="@drawable/text_we_ta_we_talent"
        android:contentDescription="@string/todo"
        android:layout_marginHorizontal="20sp"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="20sp"
        android:layout_weight="0.55">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/text_image_weta_login"
                android:contentDescription="@string/todo" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30sp">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <View
                    android:id="@+id/view4"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="0.025"/>

                <EditText
                    android:id="@+id/id"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.02"
                    android:autofillHints="아이디를 입력해 주세요."
                    android:inputType="text"
                    android:hint="@string/아이디를입력해주세요"
                    android:textColorHint="@color/black"
                    android:textSize="13sp"
                    android:background="@drawable/layout_edit_login_box"
                    android:paddingHorizontal="10sp" />

                <View
                    android:id="@+id/view6"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.01"/>

                <EditText
                    android:id="@+id/pwd"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.02"
                    android:autofillHints="비밀번호를 입력해 주세요."
                    android:inputType="textPassword"
                    android:hint="@string/비밀번호를입력해주세요"
                    android:textColorHint="@color/black"
                    android:textSize="13sp"
                    android:background="@drawable/layout_edit_login_box"
                    android:paddingHorizontal="10sp"/>

                <View
                    android:id="@+id/view7"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.01"/>

                <TextView
                    android:id="@+id/id_remember"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:text="@string/비번아이디기억안남" />

                <TextView
                    android:id="@+id/this_click"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:bufferType="spannable"
                    android:text="@string/여기를클릭해주세요" />

                <View
                    android:id="@+id/view5"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.013"/>

            </LinearLayout>
        </FrameLayout>

    </FrameLayout>

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:layout_marginHorizontal="20sp"
        android:background="@drawable/layout_btn_login_box"
        android:text="@string/로그인"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.05"/>

    <Button
        android:id="@+id/signUp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:layout_marginHorizontal="20sp"
        android:background="@drawable/layout_btn_login_box"
        android:text="@string/회원가입"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.05"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:layout_marginHorizontal="20sp"
        android:orientation="horizontal"
        android:layout_marginBottom="10sp">

        <Button
            android:id="@+id/google"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#E38686"
            android:text="@string/구글로회원가입"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            tools:ignore="ButtonStyle,NestedWeights" />

        <Button
            android:id="@+id/nav"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#86E3AB"
            android:text="@string/네이버로회원가입"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            tools:ignore="ButtonStyle" />

    </LinearLayout>
</LinearLayout>